--- a/Epyseg_build_and_train.ipynb
+++ b/Epyseg_build_and_train.ipynb
@@ -6157,7 +6157,7 @@
       "metadata": {
         "id": "iZ_tom_AB8qr",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 132
@@ -6326,9 +6326,12 @@
         "      #assert False\n",
         "      raise Exception('error!')\n",
         "    else:\n",
+        "      # move to the drive folder\n",
+        "      %cd /content/drive/My Drive\n",
         "      printmd('<font color=\"green\">Google drive successfully mounted!</font>')\n",
         "    # sys.exit()\n",
         "    #quit(keep_kernel=False)\n",
+        "\n",
         "\n",
         "  # check we are using GPU\n",
         "  device_name = tf.test.gpu_device_name()\n",
@@ -6350,7 +6353,7 @@
         "\n",
         "# printmd('this is a test')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6455,7 +6458,7 @@
         "except:\n",
         "  printmd('<br><font color=\"red\">EPySeg failed to load. Please repeat this step</font>.')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6645,7 +6648,7 @@
         "ui = widgets.VBox([label, model])\n",
         "display(ui) "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6787,7 +6790,7 @@
         "# else: # TODO deactivate for now!!!\n",
         "  # print('pre-trained')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6874,7 +6877,7 @@
         "  printmd('<font color=\"red\">Something went wrong, please repeat step 4</font>')\n",
         "  pass"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7133,7 +7136,7 @@
         "interact(browse_for_weights, x=drop_load_weights);\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7169,11 +7172,11 @@
       "metadata": {
         "id": "-lp-ChN9_eAS",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
         },
-        "cellView": "form",
         "outputId": "f29b0431-54d0-437e-da43-fc022d1db308"
       },
       "source": [
@@ -7188,7 +7191,7 @@
         "else:\n",
         "  printmd('<font color=\"green\">Please move on to next step!</font>')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7314,7 +7317,7 @@
         "  print('Model is already compiled')\n",
         "  interact(recompile_model, x=force_recompile_drop);\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7380,7 +7383,7 @@
         "else:\n",
         "  printmd('<font color=\"green\">Please move on to next step!</font>')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7412,6 +7415,7 @@
       "metadata": {
         "id": "IQPRVMwrhSJ_",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281,
@@ -7438,7 +7442,6 @@
             "4a76062fd7ff411b9f236d19dbe6edb1"
           ]
         },
-        "cellView": "form",
         "outputId": "7b0e5065-3da3-4b02-9083-039d400dc3ce"
       },
       "source": [
@@ -7449,7 +7452,7 @@
         "ui = widgets.VBox([folder_train_originals_label, folder_train_originals.widget()])\n",
         "display(ui)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7485,6 +7488,7 @@
       "metadata": {
         "id": "ugVpVFrghUHD",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281,
@@ -7511,7 +7515,6 @@
             "b0017b128782416b9ffb836032b7756f"
           ]
         },
-        "cellView": "form",
         "outputId": "146520f9-7ae5-411a-f978-6d32e8ba67d1"
       },
       "source": [
@@ -7522,7 +7525,7 @@
         "ui = widgets.VBox([folder_train_segmentation_label, folder_train_segmentation.widget()])\n",
         "display(ui)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7558,11 +7561,11 @@
       "metadata": {
         "id": "OP-53HWcWuQP",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 769
         },
-        "cellView": "form",
         "outputId": "1fc34db2-a368-4dfb-f96a-8f0094a8f42e"
       },
       "source": [
@@ -7600,7 +7603,7 @@
         "  else:\n",
         "    printmd('<font color=\"red\">Problems detected. A folder seems empty. Please repeat steps 11 to 13.</font>')\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7703,6 +7706,7 @@
       "metadata": {
         "id": "Ts-n2q4eFuNv",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337,
@@ -7741,7 +7745,6 @@
             "269da1627d0141bdbb668e9d1a446741"
           ]
         },
-        "cellView": "form",
         "outputId": "8921e084-8a56-4283-d5e7-001a56eaa8ef"
       },
       "source": [
@@ -7869,7 +7872,7 @@
         "display(ui)\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7905,6 +7908,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "IceR66bUpuD5",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305,
@@ -7940,7 +7944,6 @@
             "febf27e3058444c6a15269e0949938b7"
           ]
         },
-        "cellView": "form",
         "outputId": "fce6ce2d-8eb6-4e4f-9b03-e2afd3d529f2"
       },
       "source": [
@@ -8042,7 +8045,7 @@
         "display(ui)\n",
         "\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8078,6 +8081,7 @@
       "metadata": {
         "id": "cAT1vPQIh3Hu",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 113,
@@ -8095,7 +8099,6 @@
             "d4992a7e8a06457d83e338385361e2dd"
           ]
         },
-        "cellView": "form",
         "outputId": "950cc832-2019-4fb1-c752-e4d98307b03c"
       },
       "source": [
@@ -8115,7 +8118,7 @@
         "ui = widgets.VBox(wdgts)\n",
         "display(ui)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8151,6 +8154,7 @@
       "metadata": {
         "id": "edC0r13ryAWM",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81,
@@ -8165,7 +8169,6 @@
             "1c3479435b8f4db99dab277f075069fc"
           ]
         },
-        "cellView": "form",
         "outputId": "01271ea9-8a12-4e94-cfa8-3d79e0a0423b"
       },
       "source": [
@@ -8206,7 +8209,7 @@
         "  ui = widgets.VBox(wdgts)\n",
         "  display(ui)\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8242,6 +8245,7 @@
       "metadata": {
         "id": "HBgzcAAgybe9",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 239,
@@ -8269,7 +8273,6 @@
             "18801128f1584a7bac8c0c779be66fd7"
           ]
         },
-        "cellView": "form",
         "outputId": "4afc531c-abbf-4176-d1ec-a4a9b583d1d1"
       },
       "source": [
@@ -8370,7 +8373,7 @@
         "ui = widgets.VBox([ list1, data_aug_range_rate, add,remove])#augmentation_drop,\n",
         "display(ui)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8422,11 +8425,11 @@
       "metadata": {
         "id": "Z6_EfI0pEsiH",
         "colab_type": "code",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "cellView": "form",
         "outputId": "fe46ecce-1625-485d-92ef-a561252f6510"
       },
       "source": [
@@ -8506,7 +8509,7 @@
         "  deepTA.saveAsJsonWithWeights()\n",
         "  deepTA.plot_graph(deepTA.model._name + '_graph.png')\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
