--- a/EPySeg_build_or_train_a_model_or_further_train_pretrained_EPySeg_model_v4.ipynb
+++ b/EPySeg_build_or_train_a_model_or_further_train_pretrained_EPySeg_model_v4.ipynb
@@ -10505,11 +10505,10 @@
       },
       "source": [
         "#@title <-- Press Run\n",
-        "\n",
+        "from __future__ import print_function # bug fix --> import future must be at the beginning\n",
         "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "import sys\n",
-        "from __future__ import print_function\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import interact, interactive, fixed, interact_manual\n",
         "from IPython.display import Markdown, display\n",
@@ -10692,7 +10691,7 @@
         "\n",
         "# printmd('this is a test')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10808,7 +10807,7 @@
         "except:\n",
         "  printmd('<br><font color=\"red\">EPySeg failed to load. Please repeat this step</font>.')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11120,7 +11119,7 @@
         "ui = widgets.VBox([label, model,model_version])\n",
         "display(ui) "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11233,7 +11232,7 @@
         "# else: # TODO deactivate for now!!!\n",
         "  # print('pre-trained')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11322,7 +11321,7 @@
         "  printmd('<font color=\"red\">Something went wrong, please repeat step 4</font>')\n",
         "  pass"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11686,7 +11685,7 @@
         "  printmd('<br><font color=\"green\">Please move on to next step!</font>')\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11736,7 +11735,7 @@
         "else:\n",
         "  printmd('<font color=\"green\">Please move on to next step!</font>')    "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11907,7 +11906,7 @@
         "  print('Model is already compiled')\n",
         "  interact(recompile_model, x=force_recompile_drop);\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11972,7 +11971,7 @@
         "else:\n",
         "  printmd('<font color=\"green\">Please move on to next step!</font>')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12111,7 +12110,7 @@
         "ui = widgets.VBox([folder_train_originals_label, folder_train_originals.widget()])\n",
         "display(ui)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12262,7 +12261,7 @@
         "ui = widgets.VBox([folder_train_segmentation_label, folder_train_segmentation.widget()])\n",
         "display(ui)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12336,7 +12335,7 @@
         "  else:\n",
         "    printmd('<font color=\"red\">Problems detected. A folder seems empty. Please repeat steps 11 to 13.</font>')\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12637,7 +12636,7 @@
         "display(ui)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12889,7 +12888,7 @@
         "display(ui)\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13005,7 +13004,7 @@
         "ui = widgets.VBox(wdgts)\n",
         "display(ui)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13092,7 +13091,7 @@
         "  ui = widgets.VBox(wdgts)\n",
         "  display(ui)\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13266,7 +13265,7 @@
         "ui = widgets.VBox([ list1, data_aug_range_rate, widgets.HBox([add,remove]), rotate_interpolation_free_data_augmenter_checkbox_checkbox])#augmentation_drop,\n",
         "display(ui)\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
