--- a/EPySeg_segment_v4.ipynb
+++ b/EPySeg_segment_v4.ipynb
@@ -4671,11 +4671,10 @@
       },
       "source": [
         "#@title <-- Press Run\n",
-        "\n",
+        "from __future__ import print_function # bug fix --> future import must always be first line\n",
         "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "import sys\n",
-        "from __future__ import print_function\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import interact, interactive, fixed, interact_manual\n",
         "from IPython.display import Markdown, display\n",
@@ -4862,7 +4861,7 @@
         "\n",
         "# printmd('this is a test')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4981,7 +4980,7 @@
         "except:\n",
         "  printmd('<br><font color=\"red\">EPySeg failed to load. Please repeat this step</font>.')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5298,7 +5297,7 @@
         "# ui = widgets.VBox([label, model,model_version])\n",
         "display(ui) "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5366,7 +5365,7 @@
         "  ui = widgets.VBox([load_model_label, model_path.widget()])\n",
         "  display(ui)\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5442,7 +5441,7 @@
         "  printmd('<font color=\"red\">Something went wrong, please repeat steps 4 and 5</font>')\n",
         "  pass"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5699,7 +5698,7 @@
         "  interact(browse_for_weights, x=drop_load_weights);\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5749,7 +5748,7 @@
         "  else:\n",
         "    printmd('<font color=\"green\">Please move on to next step!</font>')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5831,7 +5830,7 @@
         "ui = widgets.VBox([folder_train_originals_label, folder_train_originals.widget()])\n",
         "display(ui)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5893,7 +5892,7 @@
         "else:\n",
         "    printmd('<font color=\"red\">Problems detected. The folder seems empty. Please repeat step 8.</font>')\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6170,7 +6169,7 @@
         "display(ui)\n",
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6267,7 +6266,7 @@
         "  ui = widgets.VBox(wdgts)\n",
         "  display(ui)\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6483,7 +6482,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
