--- a/EPySeg_build_or_train_a_model_or_further_train_pretrained_EPySeg_model_v4.ipynb
+++ b/EPySeg_build_or_train_a_model_or_further_train_pretrained_EPySeg_model_v4.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "EPySeg_build_or_train_a_model_or_further_train_pretrained_EPySeg_model_v3.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10783,7 +10782,8 @@
         "!pip install scikit-image\n",
         "!pip install scipy\n",
         "!pip install segmentation-models==1.0.1\n",
-        "!pip install tifffile\n",
+        "!pip install tifffile==2021.11.2\n",
+        "!pip install qtawesome\n",
         "!pip install natsort\n",
         "!pip install numexpr\n",
         "!pip install elasticdeform\n",
